mongo-mongo.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: mongo
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: mongo
  name: mongo
  namespace: mongo
spec:
  containers:
  - image: mongo
    name: mongo
    ports:
    - containerPort: 27017
---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongo
  name: mongo
  namespace: mongo
spec:
  ports:
  - name: tcp-client
    port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    app: mongo
  type: ClusterIP
