mongo-mongo-express.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: mongo-express
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  namespace: mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
      name: mongo-express
    spec:
      containers:
      - image: mongo-express
        name: mongo-express
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongo-express
  name: mongo-express
  namespace: mongo-express
spec:
  ports:
  - name: http-web
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: mongo-express
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-express
  namespace: mongo-express
spec:
 rules:
   - http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: mongo-express
               port:
                 number: 8081
