mongo-mongo-express-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongo-express
  namespace: mongo-express
spec:
  podSelector:
    matchLabels:
      app: mongo-express
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
      ports:
        - port: 8081
  egress:
    - to:
        - namespaceSelector: 
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
    - to:
        - namespaceSelector:
            matchLabels:
               kubernetes.io/metadata.name: mongo
          podSelector:
            matchLabels:
              app: mongo
      ports:
        - port: 27017
