mongo-mongo-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongo
  namespace: mongo
spec:
  podSelector:
    matchLabels:
      app: mongo
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: mongo-express
          podSelector:
            matchLabels:
              app: mongo-express
      ports:
        - port: 27017
          protocol: TCP
  egress:
    - to:
        - namespaceSelector: 
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
